--- a/package.json
+++ b/package.json
@@ -1,45 +1,46 @@
 {
-  "name": "@dstanesc/O-O-O-O-O-O-O",
-  "description": "O7 is the next level persistence. There is cloud continuum and there is local store. Locality first, non local next.",
-  "version": "0.0.2",
-  "homepage": "https://github.com/dstanesc/O-O-O-O-O-O-O",
-  "repository": "https://github.com/dstanesc/O-O-O-O-O-O-O",
-  "license": "(Apache-2.0 AND MIT)",
-  "author": "dstanesc <dstanesc@gmail.com>",
-  "type": "module",
-  "main": "./dist/index.js",
-  "module": "./dist/index.js",
-  "types": "./dist/index.d.ts",
-  "scripts": {
-    "clean": "rimraf dist node_modules",
-    "build": "tsc",
-    "test": "npm-run-all build test:jest",
-    "dev": "tsc -w",
-    "test:jest": "NODE_OPTIONS=--experimental-vm-modules cross-env jest --runInBand dist",
-    "start": "tsc && node --experimental-specifier-resolution=node --loader ts-node/esm src/tmp.ts"
-  },
-  "jest": {
-    "testRegex": "(\\.(test|spec))\\.(js)$"
-  },
-  "devDependencies": {
-    "@dstanesc/ipfs-block-store": "^0.0.1",
-    "@dstanesc/wasm-chunking-fastcdc-node": "^0.1.1",
-    "@types/jest": "^28.1.5",
-    "bent": "^7.3.12",
-    "cross-env": "7.0.3",
-    "ipfs-http-client": "^59.0.0",
-    "jest": "^28.1.2",
-    "npm-run-all": "4.1.5",
-    "rimraf": "3.0.2",
-    "typescript": "^4.5.5"
-  },
-  "dependencies": {
-    "@dstanesc/http-block-store": "^0.0.1",
-    "@dstanesc/store-chunky-bytes": "^0.0.13",
-    "@ipld/dag-cbor": "^7.0.2",
-    "fast-deep-equal": "^3.1.3",
-    "msgpackr": "^1.7.2",
-    "multiformats": "^9.9.0",
-    "prolly-trees": "^0.0.1"
-  }
+    "name": "@dstanesc/O-O-O-O-O-O-O",
+    "description": "O7 is the next level persistence. There is cloud continuum and there is local store. Locality first, non local next.",
+    "version": "0.0.2",
+    "homepage": "https://github.com/dstanesc/O-O-O-O-O-O-O",
+    "repository": "https://github.com/dstanesc/O-O-O-O-O-O-O",
+    "license": "(Apache-2.0 AND MIT)",
+    "author": "dstanesc <dstanesc@gmail.com>",
+    "type": "module",
+    "main": "./dist/index.js",
+    "module": "./dist/index.js",
+    "types": "./dist/index.d.ts",
+    "scripts": {
+        "clean": "rimraf dist node_modules",
+        "build": "tsc",
+        "test": "npm-run-all build test:jest",
+        "dev": "tsc -w",
+        "test:jest": "NODE_OPTIONS=--experimental-vm-modules cross-env jest --runInBand dist",
+        "start": "tsc && node --experimental-specifier-resolution=node --loader ts-node/esm src/tmp.ts"
+    },
+    "jest": {
+        "testRegex": "(\\.(test|spec))\\.(js)$"
+    },
+    "devDependencies": {
+        "@dstanesc/ipfs-block-store": "^0.0.1",
+        "@dstanesc/wasm-chunking-fastcdc-node": "^0.1.1",
+        "@types/jest": "^28.1.5",
+        "bent": "^7.3.12",
+        "cross-env": "7.0.3",
+        "ipfs-http-client": "^59.0.0",
+        "jest": "^28.1.2",
+        "npm-run-all": "4.1.5",
+        "prettier": "2.7.1",
+        "rimraf": "3.0.2",
+        "typescript": "^4.5.5"
+    },
+    "dependencies": {
+        "@dstanesc/http-block-store": "^0.0.1",
+        "@dstanesc/store-chunky-bytes": "^0.0.13",
+        "@ipld/dag-cbor": "^7.0.2",
+        "fast-deep-equal": "^3.1.3",
+        "msgpackr": "^1.7.2",
+        "multiformats": "^9.9.0",
+        "prolly-trees": "^0.0.1"
+    }
 }
