--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "types": "./dist/index.d.ts",
     "scripts": {
         "clean": "rimraf dist node_modules",
+        "format": "npx prettier --write .",
         "build": "tsc",
         "test": "npm-run-all build test:jest",
         "dev": "tsc -w",
@@ -22,9 +23,10 @@
         "testRegex": "(\\.(test|spec))\\.(js)$"
     },
     "devDependencies": {
-        "@dstanesc/ipfs-block-store": "^0.0.1",
+        "@dstanesc/ipfs-block-store": "^0.0.9",
         "@dstanesc/wasm-chunking-fastcdc-node": "^0.1.1",
         "@types/jest": "^28.1.5",
+        "@types/uuid": "^8.3.4",
         "bent": "^7.3.12",
         "cross-env": "7.0.3",
         "ipfs-http-client": "^59.0.0",
@@ -35,12 +37,13 @@
         "typescript": "^4.5.5"
     },
     "dependencies": {
-        "@dstanesc/http-block-store": "^0.0.1",
+        "@dstanesc/http-block-store": "^0.0.2",
         "@dstanesc/store-chunky-bytes": "^0.0.13",
         "@ipld/dag-cbor": "^7.0.2",
         "fast-deep-equal": "^3.1.3",
         "msgpackr": "^1.7.2",
         "multiformats": "^9.9.0",
-        "prolly-trees": "^0.0.1"
+        "prolly-trees": "^0.0.1",
+        "uuid": "^9.0.0"
     }
 }
