--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@dstanesc/O-O-O-O-O-O-O",
-    "description": "O7 is the next level persistence. There is cloud continuum and there is local store. Locality first, non local next.",
-    "version": "0.0.3",
+    "description": "O-O-O-O-O-O-O is content addressed persistence for graph-like structures",
+    "version": "0.0.1",
     "homepage": "https://github.com/dstanesc/O-O-O-O-O-O-O",
     "repository": "https://github.com/dstanesc/O-O-O-O-O-O-O",
     "license": "(Apache-2.0 AND MIT)",
@@ -41,7 +41,7 @@
         "@dstanesc/store-chunky-bytes": "^0.0.13",
         "@ipld/dag-cbor": "^7.0.2",
         "fast-deep-equal": "^3.1.3",
-        "msgpackr": "^1.7.2",
+        "msgpackr": "^1.8.1",
         "multiformats": "^9.9.0",
         "prolly-trees": "^0.0.1",
         "uuid": "^9.0.0"
