--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@dstanesc/O-O-O-O-O-O-O",
+    "name": "@dstanesc/o-o-o-o-o-o-o",
     "description": "O-O-O-O-O-O-O is content addressed persistence for graph-like structures",
     "version": "0.0.1",
     "homepage": "https://github.com/dstanesc/O-O-O-O-O-O-O",
