--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
         "npm-run-all": "4.1.5",
         "prettier": "2.7.1",
         "rimraf": "3.0.2",
-        "typescript": "^4.5.5"
+        "ts-node": "^10.9.1",
+        "typescript": "^4.9.4"
     },
     "dependencies": {
         "@dstanesc/http-block-store": "^0.0.2",
