--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@dstanesc/o-o-o-o-o-o-o",
-    "description": "O-O-O-O-O-O-O is content addressed persistence for graph structures",
-    "version": "0.0.2",
+    "description": "O-O-O-O-O-O-O is content addressed persistence for data structures",
+    "version": "0.0.3",
     "homepage": "https://github.com/dstanesc/O-O-O-O-O-O-O",
     "repository": "https://github.com/dstanesc/O-O-O-O-O-O-O",
     "license": "(Apache-2.0 AND MIT)",
