--- a/package.json
+++ b/package.json
@@ -1,19 +1,25 @@
 {
     "name": "@dstanesc/o-o-o-o-o-o-o",
-    "description": "O-O-O-O-O-O-O is content addressed persistence for data structures",
-    "version": "0.0.3",
+    "description": "O-O-O-O-O-O-O is a collection of content addressed persistent data structures",
+    "version": "0.0.4",
     "homepage": "https://github.com/dstanesc/O-O-O-O-O-O-O",
     "repository": "https://github.com/dstanesc/O-O-O-O-O-O-O",
     "license": "(Apache-2.0 AND MIT)",
     "author": "dstanesc <dstanesc@gmail.com>",
     "keywords": [
-        "ipfs",
-        "s3",
-        "content-addressed",
-        "immutable",
-        "persistence",
+        "persistent-data-structures",
         "graph",
-        "content-defined-chunking"
+        "tree",
+        "list",
+        "immutable",
+        "versioned",
+        "cryptographic-hash",
+        "content-addressed",
+        "content-defined-chunking",
+        "ipfs-block-store",
+        "http-block-store",
+        "s3-block-store",
+        "az-block-store"
     ],
     "type": "module",
     "main": "./dist/index.js",
