draft trust api

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "versioned",
         "cryptographic-hash",
         "content-addressed",
+        "cryptographic-trust",
         "content-defined-chunking",
         "ipfs-block-store",
         "http-block-store",
@@ -42,6 +43,7 @@
         "@dstanesc/wasm-chunking-fastcdc-node": "^0.1.1",
         "@types/jest": "^28.1.5",
         "@types/uuid": "^8.3.4",
+        "base64-js": "^1.5.1",
         "bent": "^7.3.12",
         "cross-env": "7.0.3",
         "ipfs-http-client": "^59.0.0",
