--- a/package.json
+++ b/package.json
@@ -40,9 +40,11 @@
     },
     "devDependencies": {
         "@dstanesc/ipfs-block-store": "^0.0.9",
+        "@dstanesc/s3-block-store": "^0.0.3",
         "@dstanesc/wasm-chunking-fastcdc-node": "^0.1.1",
         "@types/jest": "^28.1.5",
         "@types/uuid": "^8.3.4",
+        "aws-sdk": "^2.1294.0",
         "base64-js": "^1.5.1",
         "bent": "^7.3.12",
         "cross-env": "7.0.3",
