--- a/package.json
+++ b/package.json
@@ -59,11 +59,13 @@
     "dependencies": {
         "@dstanesc/http-block-store": "^0.0.2",
         "@dstanesc/store-chunky-bytes": "^0.0.13",
-        "@ipld/dag-cbor": "^7.0.2",
+        "@ipld/car": "^5.1.1",
+        "@ipld/dag-cbor": "^9.0.0",
+        "bounds": "^3.0.0",
         "fast-deep-equal": "^3.1.3",
         "msgpackr": "^1.8.1",
-        "multiformats": "^9.9.0",
-        "prolly-trees": "^0.0.1",
+        "multiformats": "^11.0.2",
+        "prolly-trees": "^1.0.4",
         "uuid": "^9.0.0"
     }
 }
