--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
         "base64-js": "^1.5.1",
         "bent": "^7.3.12",
         "cross-env": "7.0.3",
+        "graphql": "^16.6.0",
         "ipfs-http-client": "^59.0.0",
         "jest": "^28.1.2",
         "npm-run-all": "4.1.5",
