--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     },
     "devDependencies": {
         "@dstanesc/ipfs-block-store": "^0.0.9",
+        "@dstanesc/o-o-o-o-o-o-o-r": "^0.0.3",
         "@dstanesc/s3-block-store": "^0.0.3",
         "@dstanesc/wasm-chunking-fastcdc-node": "^0.1.1",
         "@types/jest": "^28.1.5",
@@ -61,6 +62,7 @@
         "@dstanesc/store-chunky-bytes": "^0.0.13",
         "@ipld/car": "^5.1.1",
         "@ipld/dag-cbor": "^9.0.0",
+        "axios": "^1.4.0",
         "bounds": "^3.0.0",
         "fast-deep-equal": "^3.1.3",
         "msgpackr": "^1.8.1",
