--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
         "az-block-store"
     ],
     "type": "module",
-    "main": "./dist/index.js",
+    "exports": "./dist/index.js",
     "module": "./dist/index.js",
     "types": "./dist/index.d.ts",
     "scripts": {
